--- a/public/index.templ
+++ b/public/index.templ
@@ -1,12 +1,19 @@
 package public
 
-templ Index(name string) {
-    @DocType()
-    @Head()
-    @Body(pageIndex(name))
+templ Index() {
+@DocType()
+@Head()
+@Body(pageIndex())
 }
 
-templ pageIndex(name string) {
-    <p>Hello Template!</p>
-    <p>My name is <span class="text-xl font-bold">{ name }</span></p>
+templ pageIndex() {
+<div class="flex flex-col">
+    <p>Hello Anon User!</p>
+    <p>Don't be afraid to add the spiciest messages.</p>
+
+    <div id="create-room">
+        <button hx-get="/create/room" hx-target="#create-room" hx-swap="innerHTML"
+            class="px-3 py-1 bg-zinc-800 text-white flex items-center justify-center">Create A room!</button>
+    </div>
+</div>
 }
